# AgenticSearch

./: .gitignore  README.md  pyproject.toml
scripts/: run_task_examples.py
src/agentic_search/: __init__.py  __main__.py  cli.py  config.py
src/agentic_search/api/: main.py
src/agentic_search/models/: __init__.py  schemas.py
src/agentic_search/pipeline/: __init__.py  chunk.py  extract.py  fetch.py  merge.py  run.py  search.py
src/agentic_search/static/: index.html
tests/: test_merge.py
